Aplicação reescrita com typescript.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "covid",
-  "version": "0.1.0",
+  "name": "covid-19-tracker",
+  "homepage": "https://devbsb.com.br/covid",
+  "version": "2.0",
+  "author": {
+    "name": "Matheus Bastos",
+    "email": "matheusbastos@outlook.com",
+    "url": "https://devbsb.com.br"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,11 +15,24 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-moment": "^0.9.7",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.4",
+    "@types/styled-components": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
